<resources>
    <string name="app_name">Huron</string>
    <string name="add_status_title">Add new status</string>
    <string name="add_status">Add status</string>
    <string name="add_contact_camel_literal">Add Contact</string>
    <string name="title_activity_maps">Maps</string>
    <string name="manage_contacts">Manage contacts</string>
    <string name="add_contact">Add a contact</string>
    <string name="enter_contact_id_message">Enter your contact\'s id</string>
    <string name="cancel_literal">Cancel</string>
    <string name="contacts_literal">Contacts</string>
    <string name="characters_remaining_message">Characters remaining: %1$d</string>
    <string name="default_zoom">Default zoom</string>
    <string name="delete_confirmation_message">Are you sure you want to remove %s?</string>
    <string name="delete_literal">Delete</string>
    <string name="deleted_literal">Deleted</string>
    <string name="edit_literal">Edit</string>
    <string name="get_user_info_camel_literal">Get User Info</string>
    <string name="location_permission_rationale">
        In order to show the location of you and your contacts on the map, this app requires
        you to grant location access.  Without this the app can\'t help you get in touch with
        the contacts around you.  After enabling location tracking you can disable it at any time
        by tapping the icon of an eye at the top of the screen.
    </string>
    <string name="name_literal">Name</string>
    <string name="new_status_hint">Your new custom status</string>
    <string name="remove_camel_literal">Remove</string>
    <string name="save_literal">Save</string>
    <string name="statuses_literal">Statuses</string>
    <string name="contact_parcel_key">contact</string>
    <string name="login_camel_literal">Login</string>
    <string name="logout_camel_literal">Logout</string>
    <string name="register_camel_literal">Register</string>
    <string name="register_rationale">In order use all the features of this app you need to register
        for an account.</string>
    <string name="remember_me_message">Remember me</string>
    <string name="settings">Settings</string>
    <string name="toggle_tracking">Toggle tracking</string>
    <string name="undo_literal">undo</string>
    <string name="update_map_info_message">Update map info</string>
    <string name="username_literal">Your desired username</string>
    <string name="your_user_id_message">Your user id</string>

    <string name="invalid_contact_edit_message">No content. Changes discarded.</string>
    <string name="invalid_status_edit_message_empty">Cannot add an empty status</string>

    <!--DEBUG-->

    <string name="DEBUG_TRACKING_STATUS">Tracking is %s</string>

    <!--KEYS-->

    <string name="KEY_DB_INTERFACE_OBJ">db</string>
    <!--used when Contact class implemented Parcelable. Should remove-->
    <string name="KEY_GET_INTENT_CLASS_NAME">getIntentClassName</string>
    <string name="KEY_PARCELABLE_CONTACT">contact</string>
    <string name="KEY_NEW_STATUS">new status</string>
    <string name="KEY_INVALID_CONTACT_EDIT">invalid contact edit</string>
    <string name="KEY_INVALID_STATUS_EDIT">invalid status edit</string>
    <!--item position within the list-->
    <string name="KEY_ITEM_POSITION">item position</string>
    <string name="KEY_LATITUDE">latitude</string>
    <string name="KEY_LONGITUDE">longitude</string>
    <string name="KEY_CONTACT_STATUS">status</string>
    <string name="KEY_TIMESTAMP">timestamp</string>
    <string name="KEY_USER">user</string>
    <!--the user's unique id which will be used by other users to add them as a contact-->
    <string name="KEY_USER_ID">user id</string>
    <string name="KEY_USERNAME">username</string>

    <!--TAGS-->
    <string name="APP_TAG">Huron</string>

    <!--FILE NAMES-->
    <string name="status_file_name">status.txt</string>
    <string name="contacts_file_name">contacts.txt</string>
</resources>
