<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/settings__btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel_literal"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/settings_btn_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/save_literal"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_zoom"/>

    <Spinner
        android:id="@+id/settings_spnr_zoom_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>