<?xml version="1.0" encoding="utf-8"?>
<!--NOTE not currently in use-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_first_name"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:hint="@string/enter_contact_id_message"
        android:layout_margin="10dp"/>
    <LinearLayout
        android:id="@+id/ll_save_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        style="?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/add_contact_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel_literal"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/add_contact_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_contact_camel_literal"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>
</LinearLayout>