<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <EditText
        android:id="@+id/et_add_status_new_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_status_hint"
        android:maxLength="@integer/STATUS_CHARACTER_LIMIT"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>
    <TextView
        android:id="@+id/add_status_tv_char_limit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginRight="10dp"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/btn_add_status_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel_literal"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/btn_add_status_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save_literal"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>
</LinearLayout>